# EggAI

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  REPOSITORY_EVALUATION.md  SECURITY.md  debug_test.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.qualops/: .qualopsrc.json  qualops-llm.txt
agent/: index.html
channel/: index.html
demo/: .coveragerc  .gitignore  Makefile  README.md  docker-compose-mlflow.yml  requirements.txt  sonar-project.properties
docs/: index.md  mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/docs/concepts/: enterprise-ai-platform.md  multi-agent-system.md
docs/docs/examples/: 00-getting-started.md  05-litellm-agent.md  07-chat-with-agents.md  08-evaluation-and-dspy.md  agent_evaluation_dspy.md  coordinator.md  dspy_react.md  getting_started.md  intent_classification.md  langchain_tool_calling.md  mcp.md  multi_agent_conversation.md  multi_agent_human_chat.md  safe_agents_guardrails.md  shared_context.md  triage_agent.md  websocket_gateway.md
docs/docs/examples/example_08_dspy/: triage-optimized.html
docs/docs/handbook/: agent.md
docs/docs/references/: agent.md  channel.md  message.md  transport.md
docs/docs/sdk/: a2a.md  agent.md  inmemory-transport.md  kafka-transport.md  mcp.md  message-protocol.md  message.md  redis-transport.md  transport.md
docs/examples/: 00-getting-started.md  01-coordinator.md  02-websocket-gateway.md  03-langchain-tool-calling.md  04-context.md  05-litellm-agent.md  06-multi-agent-conversation.md  07-chat-with-agents.md  08-evaluation-and-dspy.md  agent_evaluation_dspy.md  coordinator.md  getting_started.md  langchain_tool_calling.md  litellm_agent.md  multi_agent_conversation.md  shared-context.md  ui_chat_with_agents.md  websocket_gateway.md
eggai/: agent.py
scripts/: __init__.py  run_all_tests.py  (+5 more)
(+870 files in other folders)
